fix: selection layout bug and add more lanuguage types

--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -117,6 +117,11 @@ div.CodeMirror-cursors {
     z-index: 3;
 }
 
+.CodeMirror pre.CodeMirror-line,
+.CodeMirror pre.CodeMirror-line-like {
+    padding: 0 0; /* Horizontal padding of content */
+}
+
 .CodeMirror-lines {
     padding: @code-padding 0;
 
